force-app/main/default/objects/How_To__kav/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Article content</description>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>