force-app/main/default/objects/How_To__kav/fields/Days_until_expires__c.field-meta.xml
<CustomField>
    <fullName>Days_until_expires__c</fullName>
    <formula>Article_Expiration_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until expires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>