force-app/main/default/objects/How_To__kav/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <description>Group which owns and maintains the article.</description>
    <inlineHelpText>Group which owns and maintains the article.</inlineHelpText>
    <label>Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Technologies</fullName>
            </value>
            <value>
                <fullName>Admission Services</fullName>
            </value>
            <value>
                <fullName>ASU Online</fullName>
            </value>
            <value>
                <fullName>Barrett Honors College</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>College of Health Solutions</fullName>
            </value>
            <value>
                <fullName>College of Liberal Arts and Sciences</fullName>
            </value>
            <value>
                <fullName>College of Nursing and Health Innovation</fullName>
            </value>
            <value>
                <fullName>College of Public Service and Community Solutions</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Fulton Schools of Engineering</fullName>
            </value>
            <value>
                <fullName>Graduate Education</fullName>
            </value>
            <value>
                <fullName>Health Services</fullName>
            </value>
            <value>
                <fullName>Herberger Institute</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Int'l Students and Scholars Center</fullName>
            </value>
            <value>
                <fullName>Library Resources</fullName>
            </value>
            <value>
                <fullName>Mary Lou Fulton Teachers College</fullName>
            </value>
            <value>
                <fullName>New College</fullName>
            </value>
            <value>
                <fullName>Orientation and Family Programs</fullName>
            </value>
            <value>
                <fullName>Parking and Transit Services</fullName>
            </value>
            <value>
                <fullName>Provost Office</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>School of Letters and Sciences</fullName>
            </value>
            <value>
                <fullName>School of Sustainability</fullName>
            </value>
            <value>
                <fullName>Student Business Services</fullName>
            </value>
            <value>
                <fullName>Study Abroad</fullName>
            </value>
            <value>
                <fullName>Sun Card Services</fullName>
            </value>
            <value>
                <fullName>Sun Devil Athletics</fullName>
            </value>
            <value>
                <fullName>Sun Devil Dining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>